# create-contract-automation

./: create-contract.bat  main.py  pyproject.toml  temp.docx
